# brainfuck

./: CMakeLists.txt  README.md  description  hello.b  str2bf.py
include/: config.h.cmake  debug.h  help.h
src/: bfindent.cpp  debug.cpp  help.cpp  int2bf.cpp  main.cpp  str2bf.cpp
